Started preparing generated code for automated testing * client class now has a list of services * services list their methods * additional methods for getting request schema * resource classes have schema field

--- a/codegen/templates/python/client_initpy_python.tmpl
+++ b/codegen/templates/python/client_initpy_python.tmpl
@@ -15,6 +15,11 @@ from .{{$v.ModuleName}} import {{$v.ClassName}}{{end}}
 from .http_client import HTTPClient
 
 class Client:
+
+    _services = (
+        {{ range $k, $v := .Services }}"{{$v.EndpointName}}",{{end}}
+    )
+
     def __init__(self, base_uri="{{.BaseURI}}"):
         http_client = HTTPClient(base_uri)
         {{- if .Securities}}
