--- a/codegen/templates/python/class_python.tmpl
+++ b/codegen/templates/python/class_python.tmpl
@@ -24,6 +24,15 @@ class {{.Name}}(object):
     auto-generated. don't touch.
     """
 
+    _schema = {
+        {{ range $key, $val := .Fields -}}
+        "{{$val.Name}}": {
+            "type": {{if $val.IsList}}[{{$val.DataType}}]{{else}}{{$val.DataType}}{{end}},
+            "required": {{if $val.Required}}True{{else}}False{{end}}
+        },
+        {{ end -}}
+    }
+
     @staticmethod
     def create(**kwargs):
         """
@@ -37,9 +46,9 @@ class {{.Name}}(object):
 
     def __init__(self, json=None, **kwargs):
         if json is None and not kwargs:
-            raise ValueError('No data or kwargs present')
+            raise ValueError("No data or kwargs present")
 
-        class_name = '{{.Name}}'
+        class_name = "{{.Name}}"
         data = json or kwargs
 
         # set attributes
@@ -50,7 +59,7 @@ class {{.Name}}(object):
         {{- else -}}
         data_types = [{{.DataType}}]
         {{- end }}
-        self.{{$val.Name}} = client_support.set_property('{{$val.Name}}', data, data_types, {{if $val.HasChildProperties}}True{{else}}False{{end}}, {{ $val.RequiredChildProperties }}, {{if $val.IsList}}True{{else}}False{{end}}, {{if $val.Required}}True{{else}}False{{end}}, class_name)
+        self.{{$val.Name}} = client_support.set_property("{{$val.Name}}", data, data_types, {{if $val.HasChildProperties}}True{{else}}False{{end}}, {{ $val.RequiredChildProperties }}, {{if $val.IsList}}True{{else}}False{{end}}, {{if $val.Required}}True{{else}}False{{end}}, class_name)
 
         {{- end }}
 
@@ -69,7 +78,7 @@ class {{.Name}}(object):
         Load the class in capnp schema {{.CapnpName}}.capnp
         :rtype bytes
         """
-        template = capnp.load('%s/{{.CapnpName}}.capnp' % dir)
+        template = capnp.load("%s/{{.CapnpName}}.capnp" % dir)
         return template.{{.CapnpName}}.new_message(**self.as_dict()).to_bytes()
 
 
@@ -85,7 +94,7 @@ class {{.Name}}Collection:
         :type binary: bytes. If none creates an empty capnp object.
         rtype: {{.Name}}
         """
-        template = capnp.load('%s/{{.CapnpName}}.capnp' % dir)
+        template = capnp.load("%s/{{.CapnpName}}.capnp" % dir)
         struct = template.{{.CapnpName}}.from_bytes(binary) if binary else template.{{.CapnpName}}.new_message()
         return {{.Name}}(**struct.to_dict(verbose=True))
 {{- end}}
