--- a/codegen/templates/python/client_service_aiohttp.tmpl
+++ b/codegen/templates/python/client_service_aiohttp.tmpl
@@ -7,6 +7,11 @@
 {{ $UnmarshallResponse := .UnmarshallResponse}}
 
 class {{.Name}}:
+
+    _methods = (
+        {{ range $k, $v := .Methods }}"{{$v.MethodName}}",{{end}}
+    )
+
     def __init__(self, client):
         self.client = client
 
@@ -20,7 +25,7 @@ class {{.Name}}:
         if query_params is None:
             query_params = {}
         {{ range $k, $v := $v.QueryParameters}}
-        query_params['{{$k}}'] = {{$k}}{{ end }}
+        query_params["{{$k}}"] = {{$k}}{{ end }}
 
         uri = self.client.base_url {{$v.Route}}
         {{- if (and $v.HasRespBody $UnmarshallResponse ) }}
