data types is a property now

--- a/codegen/templates/python/client_service.tmpl
+++ b/codegen/templates/python/client_service.tmpl
@@ -23,8 +23,8 @@ class {{.Name}}:
 {{ range $k, $v := .Methods }}
 
     {{- if $v.HasData }}
-    @staticmethod
-    def _{{$v.MethodName}}_data_types():
+    @property
+    def _{{$v.MethodName}}_data_types(self):
         """It is data schema for {{$v.Verb}} {{$v.Endpoint}}"""
         return ({{ range $, $t := $v.BasicTypes }}{{$t}},{{end -}})
     {{- end}}
