added _base_url property

--- a/codegen/templates/python/client_initpy_python.tmpl
+++ b/codegen/templates/python/client_initpy_python.tmpl
@@ -16,11 +16,12 @@ from .http_client import HTTPClient
 
 class Client:
 
+    _base_uri = "{{.BaseURI}}"
     _services = (
         {{ range $k, $v := .Services }}"{{$v.EndpointName}}",{{end}}
     )
 
-    def __init__(self, base_uri="{{.BaseURI}}"):
+    def __init__(self, base_uri=_base_uri):
         http_client = HTTPClient(base_uri)
         {{- if .Securities}}
         self.security_schemes = Security(http_client) {{ end }}
