--- a/codegen/templates/python/client_initpy_python_aiohttp.tmpl
+++ b/codegen/templates/python/client_initpy_python_aiohttp.tmpl
@@ -13,11 +13,12 @@ from .http_client import HTTPClient
 
 class Client:
 
+    _base_uri = "{{.BaseURI}}"
     _services = (
         {{ range $k, $v := .Services }}"{{$v.EndpointName}}",{{end}}
     )
 
-    def __init__(self,loop, base_uri="{{.BaseURI}}"):
+    def __init__(self, loop, base_uri=_base_uri):
         http_client = HTTPClient(loop, base_uri)
         {{- if .Securities}}
         self.security_schemes = Security(http_client) {{end}}
