--- a/codegen/templates/python/client_initpy_python_aiohttp.tmpl
+++ b/codegen/templates/python/client_initpy_python_aiohttp.tmpl
@@ -7,18 +7,23 @@ from .{{$class}} import {{$class}}
 from .{{$v.FilenameNoExt}} import  {{$v.Name}} {{end}}
 {{- range $k, $v := .Securities}}
 from .{{$v.ModuleName}} import {{$v.ClassName}}{{end}}
-
 from .http_client import HTTPClient
+
+BASE_URI = "{{.BaseURI}}"
 
 
 class Client:
+    """
+    auto-generated. don't touch.
+    """
 
-    _base_uri = "{{.BaseURI}}"
-    _services = (
-        {{ range $k, $v := .Services }}"{{$v.EndpointName}}",{{end}}
-    )
+    @staticmethod
+    def _get_services():
+        return (
+            {{ range $k, $v := .Services }}"{{$v.EndpointName}}",{{end}}
+        )
 
-    def __init__(self, loop, base_uri=_base_uri):
+    def __init__(self, loop, base_uri=BASE_URI):
         http_client = HTTPClient(loop, base_uri)
         {{- if .Securities}}
         self.security_schemes = Security(http_client) {{end}}
